[package]
name = "poacher"
version = "0.1.0"
authors = ["Leon Stam <leon@elephantcs.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.14"
termion = "1.5"
human-panic = "1.0.3"
clap = "2.33.3"
regex = "1"
lazy_static = "1.4.0"